<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:background="#DFDFDF"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:background="@color/black"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:title="@string/titt"
                app:titleTextColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="305dp"
                android:layout_height="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:layout_span="2"
                android:background="#009688"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:text="@string/Producto"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="58dp"
                android:layout_height="25dp"
                android:layout_column="2"
                android:layout_marginTop="12dp"
                android:layout_marginRight="25dp"
                android:background="#009688"
                android:paddingTop="2dp"
                android:text="@string/Subtotal"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:text="@string/Jabon"
                android:textColor="#737373" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginTop="5dp"
                android:text="@string/n2"
                android:textColor="#737373" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:text="@string/Shampoo"
                android:textColor="#737373" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginTop="5dp"
                android:text="@string/n10"
                android:textColor="#737373" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:text="@string/Pastas"
                android:textColor="#737373" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginTop="5dp"
                android:text="@string/n18"
                android:textColor="#737373" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="4dp"
                android:text="@string/Detergente"
                android:textColor="#737373" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginTop="5dp"
                android:text="@string/n13.4"
                android:textColor="#737373" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="25dp"
                android:layout_span="3"
                android:background="#858484" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginTop="5dp"
                android:text="@string/Subtotal"
                android:textColor="#009688" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/n43.4"
                android:textColor="#737373" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginTop="5dp"
                android:text="@string/Costo"
                android:textColor="#009688" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/n10"
                android:textColor="#737373" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginTop="5dp"
                android:text="@string/Cupon"
                android:textColor="#009688" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/nn5"
                android:textColor="#737373" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginTop="5dp"
                android:text="@string/Total"
                android:textColor="#009688" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/n48.4"
                android:textColor="#737373" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>